Rent model change, image upload for items
-Add image upload for items
-Update user/cart, user/rent
-Update rent model
-Update main.ejs
-Add user delete option

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,3 +123,9 @@ body {
     font-size: .75rem;
     text-transform: uppercase;
 }
+
+/* Item image*/
+.item-image{
+    width: 60px;
+    height: 60px;
+}
