--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -22,6 +22,7 @@
                         <form action="/item/rent" method="POST" class="form-inline my-2 my-lg-0">
                             <input type = "hidden" name = "itemId" value = <%= item._id %>>
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit"<% if(!item.stock) {%> disabled<% } %>>Kosárba</button>
+                            <input class="form-control" type="number" name="amount" value="1" min='1' max='<%=item.stock%>'>
                         </form>
                         <% } %>
                     </div>
