--- a/views/pages/admin/items.ejs
+++ b/views/pages/admin/items.ejs
@@ -42,6 +42,7 @@
                     </div>
                 </div>
             </div>
+            <% if(items.length){ %>
             <div class="col-md-12">
                 <h2>Eszközök</h2>
                 <div class="table-responsive">
@@ -60,7 +61,7 @@
                         <tbody>
                             <% for(var i=0; i < items.length; i++) { %>
                                 <tr>
-                                    <td><img src="<%= items[i].imgPath || 'https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60' %>"></td>
+                                    <td><img class="item-image" src="<%= items[i].imgPath || 'https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60' %>"></td>
                                     <td>
                                         <span id="item<%=i%>" data-id="<%= items[i]._id %>" data-name="<%= items[i].name %>"
                                             data-count="<%= items[i].count %>" data-stock="<%= items[i].stock %>">
@@ -93,6 +94,7 @@
                     </table>
                 </div>
             </div>
+            <% } %>
         </main>
     </div>
 </div>
