--- a/views/pages/admin/rents.ejs
+++ b/views/pages/admin/rents.ejs
@@ -15,19 +15,19 @@ function getUser(id){
 function getState(state){
     switch(state){
         case 0:
-            return "Kosárban"
+            return '<i class="fas fa-shopping-cart"></i>Kosárban'
             break
         case 1:
-            return "Kiadásra vár"
+            return '<i class="fas fa-warehouse"></i>Kiadásra vár'
             break
         case 2:
-            return "Kiadva"
+            return '<i class="fas fa-long-arrow-alt-left"></i>Kiadva'
             break
         case 3:
-            return "Leadásra vár"
+            return '<i class="fas fa-long-arrow-alt-right"></i>Leadásra vár'
             break
         case 4:
-            return "Leadva"
+            return '<i class="fas fa-archive"></i>Leadva'
             break
     }
 }
@@ -63,7 +63,7 @@ function getState(state){
                             <tr>
                                 <td>
                                 <span id="rent<%=i%>" data-id="<%=rents[i]._id%>">
-                                    <%= getState(rents[i].state) %>
+                                    <%- getState(rents[i].state) %>
                                 </span>
                                 </td>
                                 <td>
@@ -77,6 +77,7 @@ function getState(state){
                                 <td>
                                     <button type="button" class="btn btn-success" onclick="approveRent(<%=i%>)" <% if(rents[i].state % 2 == 0) { %> disabled <% } %>>
                                         <i class="fas fa-check"></i>
+                                        <% if(rents[i].state == 1) { %> Kiad<% }else if(rents[i].state == 3){ %> Leadás elfogadása<% } %>
                                     </button>
                                 </td>
                                 <td>
