--- a/views/pages/admin/users.ejs
+++ b/views/pages/admin/users.ejs
@@ -1,8 +1,8 @@
 <% include ../../partials/header %>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <% include ../../partials/sidebar %>
-        <main role="main">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <h2>Felhasználók</h2>
             <div class="table-responsive">
                 <table class="table table-bordered">
