--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -16,39 +16,38 @@ function getItem(id){
                 </div>
             <% } else { %>
             <h2>Kosár</h2>
-            <div class="table-responsive">
-                <table class="table table-bordered">
-                    <caption>Kosár</caption>
-                    <thead>
-                        <tr>
-                            <th>Eszköz</th>
-                            <th>Kép</th>
-                            <th>Eltávolítás</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% for(var i=0; i<rents.length; i++) { %>
-                            <% if(rents[i].isRented == true || rents[i].state > 0) continue %>
-                            <% for(var j=0; j< rents[i].items.length; j++) { %>
-                            <tr>
-                                <td>
-                                    <span id="<%=i%>" data-id="<%=rents[i]._id%>">
-                                        <%= getItem(rents[i].items[j]._id).name %><input type="number" value="<%= rents[i].items[j].amount %>" min='1' max='<%=getItem(rents[i].items[j]._id).stock%>'>
-                                    </span>
-                                </td>
-                                <td><img class=".item-image" src="https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60"></td>
-                                <td>
-                                    <button type="button" class="btn btn-danger" onclick="deleteRent(<%=i%>)">
-                                        <i class="fas fa-trash-alt"></i>
-                                    </button>
-                                </td>
-                            </tr>
-                            <% } %>
-                        <% } %>
-                    </tbody>
-                </table>
-            </div>
             <form action="./cart/confirm" method="POST">
+                <div class="table-responsive">
+                    <table class="table table-bordered">
+                        <caption>Kosár</caption>
+                        <thead>
+                            <tr>
+                                <th>Eszköz</th>
+                                <th>Kép</th>
+                                <th>Eltávolítás</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% for(var i=0; i<rents.length; i++) { %>
+                                <% if(rents[i].isRented == true || rents[i].state > 0) continue %>
+                                <% for(var j=0; j< rents[i].items.length; j++) { %>
+                                <tr>
+                                    <td>
+                                        <%= getItem(rents[i].items[j]._id).name %>
+                                        <input name="<%= rents[i].items[j]._id%>" type="number" value="<%= rents[i].items[j].amount %>" min='1' max='<%=getItem(rents[i].items[j]._id).stock%>'>
+                                    </td>
+                                    <td><span id="<%=i%>" data-id="<%=rents[i]._id%>"><img class=".item-image" src="https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60"></span></td>
+                                    <td>
+                                        <button type="button" class="btn btn-danger" onclick="deleteRent(<%=i%>)">
+                                            <i class="fas fa-trash-alt"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <% } %>
+                            <% } %>
+                        </tbody>
+                    </table>
+                </div>
                 <input type="hidden" name="id" value="<%= rents.find(rent => !rent.state)._id  %>">
                 <button type="submit" class="btn btn-success">Véglegesít</button>
             </form>
