--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -15,7 +15,7 @@
                 <div class="card">
                     <img class="card-img-top img-responsive" src="<%= item.imgPath || 'https://placeholdit.imgix.net/~text?txtsize=28&txt=200%C3%97200&w=200&h=200' %>" >
                     <div class="card-body">
-                        <h3><%= item.name %></h3>
+                        <h3 class="card-title"><%= item.name %></h3>
                         <p class="description"> Darabszám: <%= item.count %></p>
                         <p class="description"> Készleten: <%= item.stock %></p>
                         <% if(!cantRent) {%>
