--- a/views/pages/rents.ejs
+++ b/views/pages/rents.ejs
@@ -42,27 +42,26 @@ function getState(state){
                         <tr>
                             <th>Állapot</th>
                             <th>Eszköz</th>
-                            <th>Kép</th>
                             <th>Lead</th>
                         </tr>
                     </thead>
                     <tbody>
                         <% for(var i=0; i<rents.length; i++) { %>
                             <% if(!rents[i].state) continue %>
-                            <% for(var j=0; j< rents[i].items.length; j++) { %>
                             <tr>
-                                <td><%= getState(rents[i].state) %></td>
+                                <td><span id="rent<%=i%>" data-id="<%=rents[i]._id%>"><%= getState(rents[i].state) %></span></td>
                                 <td>
-                                    <%= getItem(rents[i].items[j]._id).name %>(<b><%= rents[i].items[j].amount %></b>)
+                                <% for(var j=0; j< rents[i].items.length; j++) { %>
+                                    <span style="display: block"><%= getItem(rents[i].items[j]._id).name %>(<b><%= rents[i].items[j].amount %></b>)</span>
+                                <% } %>
                                 </td>
-                                <td><img class=".item-image" src="https://placeholdit.imgix.net/~text?txtsize=10&txt=60%C3%9760&w=60&h=60"></td>
+                               
                                 <td>
-                                    <button type="button" class="btn btn-danger" onclick="deleteRent(<%=i%>)" <%if(rents[i].state != 2){%>disabled<%}%>>
-                                        <i class="fas fa-trash-alt"></i>
+                                    <button type="button" class="btn btn-danger" onclick="returnRent(<%=i%>)" <%if(rents[i].state != 2){%>disabled<%}%>>
+                                        <i class="fas fa-archive"></i>
                                     </button>
                                 </td>
                             </tr>
-                            <% } %>
                         <% } %>
                     </tbody>
                 </table>
@@ -71,4 +70,14 @@ function getState(state){
         </main>
     </div>
 </div>
+<script>
+    function returnRent(i){
+        var id = $("#rent" + i).data("id");
+        $.ajax({
+            url: './rents/' + id,
+            method: 'POST',
+            success: () => location.reload()
+        })
+    }
+</script>
 <% include ../partials/footer %>
