--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,12 +9,36 @@
     <link href="/css/main.css" rel="stylesheet" type="text/css">
     <title>SCH Szertár: Főoldal</title>
 </head>
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="/">SCH Szertár</a>
+    <% if(user && active[1] != 'admin') { %>
+    <ul class="nav d-lg-none justify-content-center">
+        <li class="nav-item <% if(active[2] === 'cart'){ %> active <% } %>">
+            <a class="nav-link" href="/user/cart">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="badge badge-warning"><%= (!user.inCart) ? '' : user.inCart %></span>
+            </a>
+        </li>
+        <li class="nav-item <% if(active[2] === 'rents' && active[1] == 'user'){ %> active <% } %>">
+                <a class="nav-link" href="/user/rents">
+                    <i class="fas fa-exchange-alt"></i>
+                    <span class="badge badge-warning"><%= (!user.inRents) ? '' : user.inRents %></span>
+                </a>
+        </li>
+        <li>
+            <a href="/user/rents" class="nav-link">
+                <i class="fas fa-bell"></i>
+                <span class="badge badge-success"></span>
+            </a>
+        </li>
+    </ul>
+    <% } %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -27,14 +51,58 @@
                 <a class="nav-link" href="/about">Rólunk</a>
             </li>
             <% if(user && user.isAdmin) { %>
-            <li class="nav-item <% if(active[1] === 'admin'){ %> active <% } %>">
-                <a class="nav-link" href="/admin">Admin</a>
+            <li class="nav-item dropdown d-lg-none <% if(active[1] === 'admin'){ %> active <% } %>">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Admin</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="/admin">Admin</a>
+                    <div class="dropdown-divider"></div>
+                    <a href="/admin/rents" class="dropdown-item">Kölcsönzések</a>
+                    <a href="/admin/items" class="dropdown-item">Eszközök</a>
+                    <a href="/admin/users" class="dropdown-item">Felhasználók</a>
+                </div>
+            </li>
+            <li class="d-none d-lg-block">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-danger" onclick="window.location.href='/admin'">Admin</button>
+                    <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/admin/rents">Kölcsönzések</a>
+                        <a class="dropdown-item" href="/admin/items">Eszközök</a>
+                        <a class="dropdown-item" href="/admin/users">Felhasználók</a>
+                    </div>
+                </div>
             </li>
             <% } %>
         </ul>
         <% if(user) { %>
             <ul class="nav navbar-nav ml-auto">
-
+                <% if(active[1] != 'admin') {%>
+                <li class="nav-item d-none d-lg-block <% if(active[2] === 'cart'){ %> active <% } %>">
+                    <a class="nav-link" href="/user/cart">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="badge badge-warning"><%= (!user.inCart) ? '' : user.inCart %></span>
+                    </a>
+                </li>
+                <li class="nav-item d-none d-lg-block <% if(active[2] === 'rents' && active[1] == 'user'){ %> active <% } %>">
+                        <a class="nav-link" href="/user/rents">
+                            <i class="fas fa-exchange-alt"></i>
+                            <span class="badge badge-warning"><%= (!user.inRents) ? '' : user.inRents %></span>
+                        </a>
+                </li>
+                <li class="nav-item d-none d-lg-block">
+                    <a href="/user/rents" class="nav-link">
+                        <i class="fas fa-bell"></i>
+                        <span class="badge badge-success"></span>
+                    </a>
+                </li>
+                <% }else if(user.isAdmin){%>
+                <li>
+                    <a href="/admin/rents" class="nav-link">
+                        <i class="fas fa-bell"></i>
+                        <span class="badge badge-success"><%= (newRents) ? newRents : '' %></span>
+                    </a>
+                </li>
+                <% } %>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
@@ -49,12 +117,10 @@
                 </li>
             </ul>
 
-            <% } else { %>
-                <form action="/auth/login" method="GET" class="form-inline my-2 my-lg-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Bejelentkezés AuthSCH-val</button>
-                </form>
-                <% } %>
+        <% } else { %>
+            <form action="/auth/login" method="GET" class="form-inline my-2 my-lg-0">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Bejelentkezés AuthSCH-val</button>
+            </form>
+        <% } %>
     </div>
 </nav>
-
-<body>
