--- a/views/pages/rents.ejs
+++ b/views/pages/rents.ejs
@@ -36,7 +36,7 @@ function getState(state){
             <% } else { %>
             <h2>Kölcsönzések</h2>
             <div class="table-responsive">
-                <table class="table table-bordered">
+                <table class="table table-bordered table-striped">
                     <caption>Kölcsönzések</caption>
                     <thead>
                         <tr>
