--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -1,26 +1,86 @@
 <% include ../partials/header %>
+<% console.log(items)
+console.log(rents)
+console.log(users)
+function getItem(id){
+    return items.find(function(item){
+        return item._id.toString() === id.toString()
+    })
+}
 
+function getUser(id){
+    return users.find(function(user){
+        return user._id.toString() === id.toString()
+    })
+}
+%>
 <div class="container-fluid">
     <div class="row">
         <% include ../partials/sidebar %>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <h1>Irányítópult</h1>
-            <canvas></canvas>
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1>Irányítópult</h1>
+                <div class="btn-toolbar mb-2 mb-md-0">
+                    <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
+                        This week
+                    </button>
+                </div>
+            </div>
+            <canvas class='my-4 w-100 chartjs-render-monitor' id="chart"></canvas>
             <h2>Kölcsönzések</h2>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                         <tr>
-                            <th></th>
+                            <th>Dátum</th>
+                            <th>Eszköz</th>
+                            <th>Név</th>
+                            <th>Email</th>
+                            <th>Telefon</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <td></td>
+                        <% rents.forEach(rent => { %>
+                        <tr>
+                            <td><%= new Date(rent.updatedAt).toLocaleString() %></td>
+                            <td>
+                                <% rent.items.forEach(item => { %>
+                                <%= getItem(item._id).name%>(<b><%= item.amount %></b>)
+                                <% }) %>
+                            </td>
+                            <td> <%= getUser(rent.user).name %></td>
+                            <td><a href="mailto:<%= getUser(rent.user).email %>"><%= getUser(rent.user).email %></a></td>
+                            <td><a href="tel:<%= getUser(rent.user).phone %>"><%= getUser(rent.user).phone %></a></td>
+                        </tr>
+                        <% }) %>
                     </tbody>
                 </table>
             </div>
         </main>
     </div>
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js" integrity="sha256-CfcERD4Ov4+lKbWbYqXD6aFM9M51gN4GUEtDhkWABMo=" crossorigin="anonymous"></script>
+<script>
+var ctx = document.getElementById("chart");
+var chart = new Chart(ctx, {
+    type: 'line',
+    data: {
+        datasets: [{
+            data: [16, 35, 72, 36, 92, 25, 30],
+            lineTension: 0,
+            backgroundColor: 'transparent',
+            borderColor: '#007bff',
+            borderWidth: 4,
+            pointBackgroundColor: '#007bff'
+        }],
+        labels: ['Hétfő', 'Kedd', 'Szerda', 'Csütörtök', 'Péntek', 'Szombat', 'Vasárnap']
+    },
+    options: {
+        legend: {
+            display: false
+        }
+    }
+})
+</script>
 <% include ../partials/footer %>
