--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,37 +9,43 @@
     <link href="/css/main.css" rel="stylesheet" type="text/css">
     <title>SCH Szertár: Főoldal</title>
 </head>
-<body>
+<body <% if(active[1] == 'about'){ %>style="padding: 0"<%}%>>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="/">SCH Szertár</a>
-    <% if(user && active[1] != 'admin') { %>
-    <ul class="nav d-lg-none justify-content-center">
-        <li class="nav-item <% if(active[2] === 'cart'){ %> active <% } %>">
-            <a class="nav-link" href="/user/cart">
-                <i class="fas fa-shopping-cart"></i>
-                <span class="badge badge-warning"><%= (!user.inCart) ? '' : user.inCart %></span>
-            </a>
-        </li>
-        <li class="nav-item <% if(active[2] === 'rents' && active[1] == 'user'){ %> active <% } %>">
-                <a class="nav-link" href="/user/rents">
-                    <i class="fas fa-exchange-alt"></i>
-                    <span class="badge badge-warning"><%= (!user.inRents) ? '' : user.inRents %></span>
+        <ul class="nav d-lg-none">
+            <% if(user && active[1] != 'admin') { %>
+            <li class="<% if(active[2] === 'cart'){ %> active <% } %>">
+                <a href="/user/cart">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span class="badge badge-warning inCart"><%= (!user.inCart) ? '' : user.inCart %></span>
                 </a>
-        </li>
-        <li>
-            <a href="/user/rents" class="nav-link">
-                <i class="fas fa-bell"></i>
-                <span class="badge badge-success"></span>
-            </a>
-        </li>
-    </ul>
-    <% } %>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-
+            </li>
+            <li class="<% if(active[2] === 'rents' && active[1] == 'user'){ %> active <% } %>">
+                    <a href="/user/rents">
+                        <i class="fas fa-exchange-alt"></i>
+                        <span class="badge badge-warning inRent"><%= (!user.inRent) ? '' : user.inRent %></span>
+                    </a>
+            </li>
+            <li>
+                <a href="/user/rents">
+                    <i class="fas fa-bell"></i>
+                    <span class="badge badge-success"></span>
+                </a>
+            </li>
+            <% }else if(user && user.isAdmin){ %>
+            <li>
+                <a href="/admin/rents">
+                    <i class="fas fa-bell"></i>
+                    <span class="badge badge-success newRents"><%= (newRents) ? newRents : '' %></span>
+                </a>
+            </li>
+            <% } %>
+        </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item <% if(!active[1]){ %> active <% } %>">
@@ -80,13 +86,13 @@
                 <li class="nav-item d-none d-lg-block <% if(active[2] === 'cart'){ %> active <% } %>">
                     <a class="nav-link" href="/user/cart">
                         <i class="fas fa-shopping-cart"></i>
-                        <span class="badge badge-warning"><%= (!user.inCart) ? '' : user.inCart %></span>
+                        <span class="badge badge-warning inCart"><%= (!user.inCart) ? '' : user.inCart %></span>
                     </a>
                 </li>
                 <li class="nav-item d-none d-lg-block <% if(active[2] === 'rents' && active[1] == 'user'){ %> active <% } %>">
                         <a class="nav-link" href="/user/rents">
                             <i class="fas fa-exchange-alt"></i>
-                            <span class="badge badge-warning"><%= (!user.inRents) ? '' : user.inRents %></span>
+                            <span class="badge badge-warning inRent"><%= (!user.inRent) ? '' : user.inRent %></span>
                         </a>
                 </li>
                 <li class="nav-item d-none d-lg-block">
@@ -96,10 +102,10 @@
                     </a>
                 </li>
                 <% }else if(user.isAdmin){%>
-                <li>
+                <li class="nav-item d-none d-lg-block">
                     <a href="/admin/rents" class="nav-link">
                         <i class="fas fa-bell"></i>
-                        <span class="badge badge-success"><%= (newRents) ? newRents : '' %></span>
+                        <span class="badge badge-success newRents"><%= (newRents) ? newRents : '' %></span>
                     </a>
                 </li>
                 <% } %>
@@ -116,7 +122,6 @@
                     </div>
                 </li>
             </ul>
-
         <% } else { %>
             <form action="/auth/login" method="GET" class="form-inline my-2 my-lg-0">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Bejelentkezés AuthSCH-val</button>
