--- a/views/errors/not-authorized.ejs
+++ b/views/errors/not-authorized.ejs
@@ -1,5 +1,13 @@
 <% include ../partials/header %>
-<p>
-    Error you don't have admin rights!
-</p>
+<div class="container-fluid">
+    <div class="row">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <div class="alert alert-danger" role="alert">
+                <h4>
+                    Az oldal használatához nem rendelkezel elég jogosultsággal!
+                </h4>
+            </div>
+        </main>
+    </div>
+</div>
 <% include ../partials/footer %>
