--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -19,15 +19,17 @@
                         <p class="description"> Darabszám: <%= item.count %></p>
                         <p class="description"> Készleten: <%= item.stock %></p>
                         <% if(!cantRent) {%>
+                        <% if(user){%>
                         <form action="/item/rent" method="POST" class="my-2 my-lg-0">
                             <input type = "hidden" name = "itemId" value = <%= item._id %>>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <button class="btn btn-outline-success" type="submit"<% if(!item.stock) {%> disabled<% } %>>Kosárba</button>
                                 </div>
-                                <input class='form-control' type="number" name="amount" value="1" min='1' max='<%=item.stock%>'>
+                                <input class='form-control' type="number" name="amount" value="1" min='1' max='<%=item.stock%>' <% if(!item.stock) {%> disabled<% } %>>
                             </div>
                         </form>
+                        <% } %>
                         <% } %>
                     </div>
                 </div>
