--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -123,7 +123,7 @@
                 </li>
             </ul>
         <% } else { %>
-            <form action="/auth/login" method="GET" class="form-inline my-2 my-lg-0">
+            <form action="/auth/login" method="POST" class="form-inline my-2 my-lg-0">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Bejelentkezés AuthSCH-val</button>
             </form>
         <% } %>
